syntax = "proto3";
import "global.proto";

package pb;

message PushNotificationRequest {
  BaseRequest base = 1;  
  int64 userID = 2;
  string title = 3;
  string message = 4;
  bool SendAsMailIfNoTokenPresent = 5;  
  repeated NotificationParameter parameters = 6;
}

message MailNotificationRequest{
  BaseRequest base = 1;
  int64 userID = 2;
  string subject = 3;
  string content = 4;
  EmailContentType ContentType = 5;
}

message NotificationParameter {
  NotificationParameterType type = 1;
  string value = 2;
}

service NotificationService {
  rpc SendPushNotification (PushNotificationRequest) returns (Empty) {}
  rpc SendMailNotification (MailNotificationRequest) returns (Empty) {}
}